repair floating of account-block on small screens

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -649,3 +649,6 @@ h1, h1 a, #header h1 a, #header h1{
     padding-bottom: 11px;
 }
 
+#account {
+    float: right;
+}
